--- a/src/app/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
+++ b/src/app/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
@@ -6,7 +6,7 @@
     <th>Ügyfél és cím</th>
     <th>Email és telefonszám</th>
     <th>Telepítési cím és a projekt jellege</th>
-    <th>Műszaki állapot</th>
+<!--    <th>Műszaki állapot</th>
     <th>Inverter</th>
     <th>Napelem</th>
     <th>
@@ -20,7 +20,7 @@
     <th>Munkalapszám</th>
     <th>Keletkezett</th>
     <th>Megrendelve</th>
-    <th>Kivitelezési határidő</th>
+    <th>Kivitelezési határidő</th>-->
   </tr>
   </thead>
   <tbody>
@@ -41,7 +41,7 @@
         <div style="width: 300px">{{item.Telepitesicim}}</div>
         <div style="width: 150px">{{item.Projektjellege}}</div>
       </td>
-      <td>
+<!--      <td>
         <div style="width:120px" [style.background-color]="MuszakiallapotColor(item.Muszakiallapot)">{{item.Muszakiallapot}}</div>
       </td>
       <td>
@@ -67,7 +67,7 @@
       <td>{{item.Munkalapszam}}</td>
       <td>{{item.Keletkezett | datehun}}</td>
       <td>{{item.Megrendelve | datehun}}</td>
-      <td>{{item.Kivitelezesihatarido | datehun}}</td>
+      <td>{{item.Kivitelezesihatarido | datehun}}</td>-->
     </tr>
     <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== '' && megjegyzesIs" (click)="clickforrow(i)" [class.active]="i == selectedrow">
       <td colspan="15">{{item.Megjegyzes}}</td>
