--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -132,8 +132,8 @@
         <div [@rowanimation]>
           <app-projekt-napelem [eppFrissit]="eppFrissit"
                                [DtoOriginal]="Dto[DtoSelectedIndex]"
-                               (OkClick)="SegedOk($event)"
-                               (CancelClick)="SegedCancel()">
+                               (eventOk)="SegedOk($event)"
+                               (eventCancel)="SegedCancel()">
           </app-projekt-napelem>
         </div>
       </ng-container>
