--- a/src/app/onlineszamla/onlineszamlaellenorzese/onlineszamlaellenorzese.component.html
+++ b/src/app/onlineszamla/onlineszamlaellenorzese/onlineszamlaellenorzese.component.html
@@ -1,8 +1,8 @@
 <div class="alapkeret">
   <h5>{{onlineszamlaservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="onlineszamlaservice.szempont"
-               [(minta)]="onlineszamlaservice.minta"
+               [(szempont)]="szempont"
+               [(minta)]="minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
                [visUj]="false">
   </app-toolbar>
@@ -20,7 +20,7 @@
     </tr>
     </thead>
     <tbody>
-    <ng-container *ngFor="let item of onlineszamlaservice.Dto; let i = index">
+    <ng-container *ngFor="let item of Dto; let i = index">
       <tr>
         <td>{{item.Navfeltolteskod}}</td>
         <td>{{item.Bizonylatkod}}</td>
@@ -38,8 +38,8 @@
     </tbody>
   </table>
   <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
-                     [rekordszam]="onlineszamlaservice.Dto.length"
-                     [osszesrekord]="onlineszamlaservice.OsszesRekord"
+                     [rekordszam]="Dto.length"
+                     [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
   </app-toolbarfooter>
 </div>
