a bizonylatnál látható a projekt

--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -38,7 +38,8 @@
     <app-bizonylat-egy [DtoOriginal]="OriginalBizonylat"
                        [bizonylatTipus]=""
                        [bizonylatLeiro]="bizonylatLeiro"
-                       [enTorles]="false">
+                       [enTorles]="false"
+                       [enProjekt]="false">
     </app-bizonylat-egy>
   </ng-template>
 
