--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -39,6 +39,9 @@
       <button [disabled]="eppFrissit" (click)="errol()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Erről
       </button>
+      <button [disabled]="eppFrissit || !enProjekt" (click)="doProjekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        Projekt
+      </button>
       <button [disabled]="eppFrissit" (click)="vagolap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-angle-right" style="margin-right: 3px" aria-hidden="true"></i>
         Vágólapra
@@ -70,6 +73,7 @@
   Kiszallitva = 12,
   Formaiellenorzes = 13,
   OSNxml = 14,
+  Projekt = 15
   }-->
 
   <ng-container *ngIf="EgyMode === 1">
@@ -183,6 +187,17 @@
       <app-bizonylat-letoltesonlineszamlaformatumban [Bizonylatkod]="Dto.Bizonylatkod"
                                                      [bizonylatLeiro]="bizonylatLeiro">
       </app-bizonylat-letoltesonlineszamlaformatumban>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="EgyMode === 15">
+    <div [@rowanimation]>
+      <h5 *ngIf="nincsProjekt">A bizonylat nem tartozik projekthez</h5>
+      <app-reszletek *ngIf="!nincsProjekt"
+                     [cim]="projektservice.cim"
+                     [item]="BizonylatProjektje"
+                     [colsets]="projektservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
 </div>
