--- a/src/app/riport/beszerzes/beszerzes.component.html
+++ b/src/app/riport/beszerzes/beszerzes.component.html
@@ -1,29 +1,26 @@
 <div class="alapkeret">
   <h5>Beszerzés</h5>
 
-  <form #f="ngForm" (ngSubmit)="submit()">
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">A teljesítés kelte</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="tol"
+      <div>
+        <div class="egylabel">A teljesítés kelte</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="tol"
                [(ngModel)]="tol" name="tol">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2"></div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="ig"
+      <div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="ig"
                [(ngModel)]="ig" name="ig">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Részletek is</div>
-      </div>
-      <div class="col-md-2">
+      <div>
+        <div class="egylabel">Részletek is</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="reszletekis" name="reszletekis">
           <option value="false">Nem</option>
@@ -31,10 +28,10 @@
         </select>
       </div>
     </div>
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Stop</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="onCancel()">Stop</button>
     </div>
   </form>
 </div>
