--- a/src/app/riport/keszlet/keszlet.component.html
+++ b/src/app/riport/keszlet/keszlet.component.html
@@ -1,22 +1,19 @@
 <div class="alapkeret">
   <h5>Készlet</h5>
 
-  <form #f="ngForm" (ngSubmit)="submit()">
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Időpontig</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="datum"
+      <div>
+        <div class="egylabel">Időpontig</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="datum"
                [(ngModel)]="datum" name="datum">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Stop</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="onCancel()">Stop</button>
     </div>
   </form>
 </div>
