--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-sm table-responsive" style="border: none">
+<table class="table table-bordered table-sm">
   <thead>
   <tr>
     <th>Id</th>
