spinner okosítás néhány helyen

--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" type="submit" [disabled]="!form.valid || eppFrissit">Ok</button>
+      <button class="btn btn-sm btn-primary" type="submit" [disabled]="!form.valid || spinnerservice.eppFrissit">Ok</button>
     </div>
   </form>
 </div>
