--- a/src/app/logon/jelszocsere/jelszocsere.component.html
+++ b/src/app/logon/jelszocsere/jelszocsere.component.html
@@ -4,40 +4,35 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Régi jelszó</div>
-      </div>
-      <div class="col-md-2">
-        <input type="password" class="form-control form-control-sm" id="regijelszo"
+      <div>
+        <div class="egylabel">Régi jelszó</div>
+        <input type="password" class="form-control form-control-sm oszlop3" id="regijelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="regijelszo" name="regijelszo">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Új jelszó</div>
-      </div>
-      <div class="col-md-2">
-        <input type="password" class="form-control form-control-sm" id="jelszo"
+      <div>
+        <div class="egylabel">Új jelszó</div>
+        <input type="password" class="form-control form-control-sm oszlop3" id="jelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszo" name="jelszo">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Új jelszó újra</div>
-      </div>
-      <div class="col-md-2">
-        <input type="password" class="form-control form-control-sm" id="jelszoujra"
+      <div>
+        <div class="egylabel">Új jelszó újra</div>
+        <input type="password" class="form-control form-control-sm oszlop3" id="jelszoujra"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszoujra" name="jelszoujra">
       </div>
     </div>
 
-    <div class="row no-gutters">
-      <div class="col-md-2"></div>
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    <div class="row no-gutters editform-row">
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || spinnerservice.eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
