--- a/src/app/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt-export/projekt-export.component.html
@@ -9,9 +9,9 @@
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary"
-              [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+              [disabled]="!f.valid || spinnerservice.eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;"
-              [disabled]="eppFrissit" type="button" (click)="onCancel()">Mégsem</button>
+              [disabled]="spinnerservice.eppFrissit" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 
   </form>
