--- a/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
+++ b/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="eppFrissit" style="margin-left:3px;" type="button" (click)="megsem()">Stop</button>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || spinnerservice.eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" [disabled]="spinnerservice.eppFrissit" style="margin-left:3px;" type="button" (click)="onCancel()">Stop</button>
     </div>
   </form>
 </div>
