--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -67,9 +67,9 @@
     </ng-template>
 
     <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="eppFrissit"
+      <button class="btn btn-sm btn-primary" [disabled]="spinnerservice.eppFrissit"
               type="button" (click)="onSubmit()">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="eppFrissit"
+      <button class="btn btn-sm btn-default" [disabled]="spinnerservice.eppFrissit"
               style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 </div>
